--- a/style.css
+++ b/style.css
@@ -5,17 +5,17 @@ body {
 header {
     position: absolute; top:0; left:0; right:0;
     background-color: rgb(30, 30, 30);
-    height: 140px;
-    color: rgb(222, 215, 215);
+    height: 110px;
+    color: rgb(237, 237, 237);
     box-shadow: 5px 1px 4px rgb(111, 111, 111);
 
 }
 
 .headlg {
-    padding-left: 7%;
+    padding-left: 6.5%;
     padding-top: 27px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 400%;
+    font-size: xxx-large;
     font-weight: 900;
 }
 
@@ -24,7 +24,7 @@ header {
     margin-left: 6%;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 600;
-    font-size: 160%;
+    font-size: x-large;
 }
 
 .soder {
@@ -33,7 +33,7 @@ header {
     flex-direction: column;
     margin-top:30px;
     margin-left: 4%;
-    margin-right: 20%;
+    margin-right: 12%;
     border-radius: 10px;
     background-color: rgb(255, 255, 255);
 }
@@ -43,7 +43,7 @@ header {
     margin-left: 2.5%;
     padding-bottom: 5px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 140%;
+    font-size: x-large;
 }
 
 .txt3 {
@@ -52,8 +52,8 @@ header {
     padding-bottom: 5px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     white-space: pre-wrap;
-    font-size: 120%;
-    word-spacing: 0.1cm;
+    font-size: large;
+    word-spacing: 0.05cm;
 }
 
 
