--- a/style.css
+++ b/style.css
@@ -1,27 +1,26 @@
 body {
-    background-color: rgb(237, 237, 237);
+    background-color: rgb(223, 223, 223);
 }
 
 header {
     position: absolute; top:0; left:0; right:0;
     background-color: rgb(30, 30, 30);
-    height: 110px;
-    color: rgb(237, 237, 237);
-    box-shadow: 5px 1px 4px rgb(111, 111, 111);
-
+    height: auto;
+    color: rgb(223, 223, 223);
 }
 
 .headlg {
-    padding-left: 6.5%;
-    padding-top: 27px;
+    padding-left: 10.5%;
+    padding-top: 15px;
+    padding-bottom: 20px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: xxx-large;
     font-weight: 900;
 }
 
 .txt1 {
-    margin-top: 170px;
-    margin-left: 6%;
+    margin-top: 155px;
+    margin-left: 10%;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 600;
     font-size: x-large;
@@ -32,28 +31,26 @@ header {
     display: flexbox;
     flex-direction: column;
     margin-top:30px;
-    margin-left: 4%;
-    margin-right: 12%;
+    margin-inline: 9.5%;
     border-radius: 10px;
     background-color: rgb(255, 255, 255);
 }
 
 .txt2 {
     margin-top: 5px;
-    margin-left: 2.5%;
+    margin-left: 6%;
     padding-bottom: 5px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: x-large;
 }
 
 .txt3 {
-    margin-top: 5px;
-    margin-inline: 2.5%;
-    padding-bottom: 5px;
+    margin-top: 13px;
+    margin-inline: 6%;
+    padding-bottom: 8px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     white-space: pre-wrap;
     font-size: large;
-    word-spacing: 0.05cm;
+    word-spacing: 0cm;
 }
-
 
