--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ header {
     padding-left: 10.5%;
     padding-top: 15px;
     padding-bottom: 20px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Calibri, sans-serif;
     font-size: xxx-large;
     font-weight: 900;
 }
@@ -21,7 +21,7 @@ header {
 .txt1 {
     margin-top: 155px;
     margin-left: 10%;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Calibri, sans-serif;
     font-weight: 600;
     font-size: x-large;
 }
@@ -40,7 +40,7 @@ header {
     margin-top: 5px;
     margin-left: 6%;
     padding-bottom: 5px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Calibri, sans-serif;
     font-size: x-large;
 }
 
@@ -48,7 +48,7 @@ header {
     margin-top: 13px;
     margin-inline: 6%;
     padding-bottom: 8px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Calibri, sans-serif;
     white-space: pre-wrap;
     font-size: large;
     word-spacing: 0cm;
