--- a/style.css
+++ b/style.css
@@ -19,11 +19,11 @@ header {
 }
 
 .txt1 {
-    margin-top: 155px;
+    margin-top: 150px;
     margin-left: 10%;
     font-family: Calibri, sans-serif;
     font-weight: 600;
-    font-size: x-large;
+    font-size: xx-large;
 }
 
 .soder {
@@ -37,20 +37,30 @@ header {
 }
 
 .txt2 {
-    margin-top: 5px;
+    padding-top: 20px;
     margin-left: 6%;
-    padding-bottom: 5px;
+    padding-bottom: 15px;
     font-family: Calibri, sans-serif;
     font-size: x-large;
 }
 
 .txt3 {
-    margin-top: 13px;
     margin-inline: 6%;
-    padding-bottom: 8px;
     font-family: Calibri, sans-serif;
     white-space: pre-wrap;
     font-size: large;
     word-spacing: 0cm;
+}
+
+.pdvl {
+    position: absolute; right: 0; left: 0;
+    color: rgb(223, 223, 223) ;
+    background-color: rgb(30, 30, 30);
+    margin-top: 30px;
+    padding-left: 10.5%;
+    padding-top: 10px;
+    padding-bottom: 20px;
+    font-family: Calibri, sans-serif;
+    font-size: large;
 }
 
