--- a/style.css
+++ b/style.css
@@ -6,8 +6,61 @@ header {
     position: absolute; top:0; left:0; right:0;
     background-color: rgb(30, 30, 30);
     height: auto;
-    color: rgb(223, 223, 223);
 }
+
+h2 {
+    font-family: Calibri, sans-serif;
+    font-size: xx-large;
+    font-weight: 600;
+}
+
+h3 {
+    font-family: Calibri, sans-serif;
+    font-size: x-large;
+    margin-bottom: 0px;
+}
+
+h4 {
+    font-family: Calibri, sans-serif;
+    margin-top: 13px;
+    margin-bottom: 0;
+    font-size: large;
+}
+
+p {
+    font-family: Calibri, sans-serif;
+    font-size: large;
+    margin-top: 18px;
+    margin-bottom: 0px;
+}
+
+img {
+    border-radius: 7px;
+}
+
+.ob_a {
+    font-family: Calibri, sans-serif;
+    font-size: large;
+    /*transform-origin: left;*/
+    transition: 0.2s;
+  }
+  .ob_a:link {
+    color: #497DDD; 
+    text-decoration: none;
+  }
+  .ob_a:visited {
+    color: #497DDD; 
+    text-decoration: none;
+  }
+  .ob_a:hover {
+    color: #154088;
+    /*transform: translate(1px, -1px) scale(1.03);*/
+    /*border-bottom: 2px dashed DarkOrchid;*/
+  }
+  .ob_a:active {
+    color: #497DDD; 
+    /*border-bottom: 1px dashed;*/
+  }
 
 .headlg {
     padding-left: 10.5%;
@@ -18,49 +71,46 @@ header {
     font-weight: 900;
 }
 
+.izbr {
+    display: -webkit-flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.main_a {
+    text-decoration: none;
+    color: rgb(223, 223, 223);
+}
+
 .txt1 {
     margin-top: 150px;
-    margin-left: 10%;
-    font-family: Calibri, sans-serif;
-    font-weight: 600;
-    font-size: xx-large;
+    padding-left: 10.18%;
 }
 
 .soder {
     display: -webkit-flex;
     display: flexbox;
     flex-direction: column;
-    margin-top:30px;
-    margin-inline: 9.5%;
+    margin-top: 30px;
+    margin-inline: 8%;
     border-radius: 10px;
     background-color: rgb(255, 255, 255);
+    padding-left: 2.1%;
+    padding-right: 3px;
+    padding-bottom: 23px;
 }
 
-.txt2 {
-    padding-top: 20px;
-    margin-left: 6%;
-    padding-bottom: 15px;
-    font-family: Calibri, sans-serif;
-    font-size: x-large;
-}
-
-.txt3 {
-    margin-inline: 6%;
-    font-family: Calibri, sans-serif;
-    white-space: pre-wrap;
-    font-size: large;
-    word-spacing: 0cm;
-}
 
 .pdvl {
     position: absolute; right: 0; left: 0;
     color: rgb(223, 223, 223) ;
     background-color: rgb(30, 30, 30);
-    margin-top: 30px;
+    margin-top: 75px;
     padding-left: 10.5%;
     padding-top: 10px;
-    padding-bottom: 20px;
+    padding-bottom: 16px;
     font-family: Calibri, sans-serif;
-    font-size: large;
+    font-size: 12px;
 }
 
